--- a/style.css
+++ b/style.css
@@ -16,9 +16,38 @@ a
     color: #566573;
 }
 
+section
+{
+    box-shadow: 5px 5px 5px #E5E7E9;
+    border-radius: 5px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10px;
+    
+    padding: 5px 10px 5px 10px;
+    
+    background-color: #EAEDED;
+}
+
+footer
+{
+    position: absolute;
+    bottom: 0px;
+}
+
 h1
 {
     color: #273746; 
     text-align: center;
     font-size: 50px;
+}
+
+h2
+{
+    color: #2C3E50;
+}
+
+.centre
+{
+    text-align: center;
 }
