--- a/style.css
+++ b/style.css
@@ -37,8 +37,7 @@ ul
 
 footer
 {
-    position: absolute;
-    bottom: 0px;
+    text-align: center;
 }
 
 h1
@@ -51,6 +50,7 @@ h1
 h2
 {
     color: #2C3E50;
+    margin-bottom: 0px;
 }
 
 h3
@@ -70,6 +70,23 @@ h3
     margin-bottom: 0px;
 }
 
+.lien
+{
+    text-align: left;
+    margin-left: 20px;
+}
+.lien a
+{
+    color: #D0D3D4;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.lien a:hover
+{
+    color: #909497;
+}
+
 .date:hover
 {
     color: #909497;
@@ -81,27 +98,20 @@ nav
     margin-right: 10%;
 }
 
-nav ul
+iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Inconsolata', monospace;
+}
+
+img {
+    margin-left: 20px;
+}
+
+.flag
 {
-    display: none;
-}
-
-nav:hover ul {
-    display: block;
-}
-
-nav:hover ul ul{
-    display: none;
-}
-
-nav ul:hover ul{
-    display: block;
-}
-
-nav ul:hover ul ul {
-    display: none;
-}
-
-nav ul ul:hover ul {
-    display: block;
+    position: fixed;
+    left: 5px;
+    top: 1px;
 }
